# ba-project

./: .gitignore  Dockerfile  LICENSE  README.md  Untitled-1 copy.py  Untitled-1.py  biedra.ipynb  pyproject.toml  raw_tess.ipynb  refactor.ipynb
src/: main.py
src/server/: main.py
src/transformers/: Receit.py  merge.ipynb
