[tool.poetry]
name = "baproject"
version = "0.1.0"
description = ""
authors = ["scrabwind <scrabwind@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.24.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
