[tool.poetry]
name = "baproject"
version = "0.1.0"
description = ""
authors = ["scrabwind <scrabwind@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.24.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
pytesseract = "^0.3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
